Run npm update.

--- a/package.json
+++ b/package.json
@@ -77,22 +77,22 @@
     "script-loader": "^0.7.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
-    "@babel/plugin-transform-react-jsx": "^7.7.7",
-    "@babel/polyfill": "^7.7.0",
-    "@babel/preset-env": "^7.7.7",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.8.3",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "@wordpress/babel-preset-default": "3.0.2",
     "@wordpress/browserslist-config": "2.2.3",
     "@wordpress/eslint-plugin": "1.0.1",
-    "autoprefixer": "^9.7.3",
+    "autoprefixer": "^9.7.4",
     "babel-loader": "8.0.5",
     "babel-preset-env": "^1.7.0",
     "classnames": "^2.2.5",
     "clean-webpack-plugin": "^2.0.2",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "5.2.0",
-    "css-loader": "^3.4.0",
+    "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
     "eslint": "^5.16.0",
     "expose-loader": "latest",
@@ -116,8 +116,8 @@
     "lodash": "^4.17.15",
     "logfile-grunt": "^0.4.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.13.0",
-    "postcss": "^7.0.25",
+    "node-sass": "^4.13.1",
+    "postcss": "^7.0.26",
     "postcss-loader": "^2.1.6",
     "react-select": "^2.4.4",
     "sass-loader": "^6.0.7",
@@ -125,10 +125,10 @@
     "style-loader": "^0.18.2",
     "stylelint": "^9.10.1",
     "stylelint-config-wordpress": "^15.0.0",
-    "terser-webpack-plugin": "^2.3.1",
+    "terser-webpack-plugin": "^2.3.2",
     "uglify-es": "3.3.9",
     "url-loader": "^1.1.2",
-    "webpack": "4.28.4",
+    "webpack": "^4.41.5",
     "webpack-cli": "3.2.1",
     "webpack-rtl-plugin": "^1.8.2",
     "wp-pot": "^1.8.0"
