--- a/package.json
+++ b/package.json
@@ -62,43 +62,43 @@
   ],
   "dependencies": {
     "@fonticonpicker/fonticonpicker": "^3.1.1",
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-regular-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.9",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "chosen-js": "^1.8.7",
     "js-cookie": "^2.2.1",
-    "leaflet": "^1.6.0",
+    "leaflet": "^1.7.1",
     "picturefill": "^3.0.3",
-    "pure-react-carousel": "^1.27.1",
+    "pure-react-carousel": "^1.27.6",
     "query-string": "^5.1.1",
     "react-slick": "^0.25.2",
     "script-loader": "^0.7.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-    "@babel/plugin-transform-react-jsx": "^7.9.4",
-    "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.6",
+    "@babel/core": "^7.12.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-transform-react-jsx": "^7.12.7",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
     "@wordpress/babel-preset-default": "3.0.2",
     "@wordpress/browserslist-config": "2.2.3",
     "@wordpress/eslint-plugin": "1.0.1",
-    "autoprefixer": "^9.7.6",
+    "autoprefixer": "^9.8.6",
     "babel-loader": "8.0.5",
     "babel-preset-env": "^1.7.0",
     "classnames": "^2.2.5",
     "clean-webpack-plugin": "^2.0.2",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "^6.3.2",
     "cross-env": "5.2.0",
-    "css-loader": "^3.5.3",
+    "css-loader": "^3.6.0",
     "cssnano": "^4.1.10",
     "eslint": "^5.16.0",
-    "expose-loader": "latest",
+    "expose-loader": "^1.0.1",
     "file-loader": "^1.1.11",
-    "grunt": "^1.1.0",
+    "grunt": "^1.3.0",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-checktextdomain": "^1.0.1",
     "grunt-contrib-clean": "^1.1.0",
@@ -114,25 +114,25 @@
     "grunt-wp-readme-to-markdown": "^2.0.1",
     "imagemin-webpack-plugin": "^2.4.2",
     "load-grunt-tasks": "^3.1.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "logfile-grunt": "^0.4.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.14.1",
-    "postcss": "^7.0.29",
+    "postcss": "^7.0.35",
     "postcss-loader": "^2.1.6",
     "react-select": "^2.4.4",
     "sass-loader": "^6.0.7",
     "slick-carousel": "^1.8.1",
     "style-loader": "^0.18.2",
-    "stylelint": "^13.3.3",
+    "stylelint": "^13.8.0",
     "stylelint-config-wordpress": "^15.0.0",
-    "terser-webpack-plugin": "^2.3.6",
+    "terser-webpack-plugin": "^2.3.8",
     "uglify-es": "3.3.9",
     "url-loader": "^1.1.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-rtl-plugin": "^1.8.2",
-    "wp-pot": "^1.9.2"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-rtl-plugin": "^2.0.0",
+    "wp-pot": "^1.9.7"
   },
   "scripts": {
     "start": "npm install && npm run watch",
