--- a/.gitattributes
+++ b/.gitattributes
@@ -45,6 +45,7 @@
 /vendor/composer export-ignore
 /vendor/autoload.php export-ignore
 
+/.babelrc export-ignore
 /.tx export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
