--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,15 @@
     "issues": "https://connections-pro.com/support/"
   },
   "require": {
-    "php": ">=5.6.0",
-    "composer/installers": "~1.2"
+    "php": ">=5.6.0"
   },
   "require-dev": {
     "php-coveralls/php-coveralls": "*",
     "phpunit/phpunit": "*",
-    "dealerdirect/phpcodesniffer-composer-installer": "*",
-    "wp-coding-standards/wpcs": "*",
     "sirbrillig/phpcs-variable-analysis": "*",
     "poststatus/wptest": "dev-master",
-    "phpcompatibility/php-compatibility": "*"
-  },
-  "minimum-stability": "dev"
+    "phpcompatibility/php-compatibility": "*",
+    "automattic/vipwpcs": "^2.3",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1"
+  }
 }
