Updates to `.gitignore`.

--- a/.gitignore
+++ b/.gitignore
@@ -68,11 +68,26 @@ composer.lock
 /vendor/symfony
 /vendor/doctrine
 /vendor/sebastian
-/vendor/webmozart
-/vendor/phpdocumentor
-/vendor/phpspec
 /vendor/myclabs
 /vendor/phpunit
 /vendor/bin
 /vendor/composer
 /vendor/autoload.php
+/vendor/dealerdirect/
+/vendor/guzzlehttp/
+/vendor/nikic/
+/vendor/phar-io/
+/vendor/php-coveralls/
+/vendor/phpcompatibility/
+/vendor/poststatus/
+/vendor/psr/
+/vendor/ralouphie/
+/vendor/sirbrillig/
+/vendor/squizlabs/
+/vendor/theseer/
+/vendor/wp-coding-standards/
+/vendor/phpcsstandards/
+/vendor/automattic/
+/vendor/phpdocumentor/
+/vendor/phpspec/
+/vendor/webmozart/
