--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,6 @@ env:
     - WP_VERSION=latest WP_MULTISITE=0
     - WP_VERSION=5.4.2 WP_MULTISITE=0
     - WP_VERSION=5.3.4 WP_MULTISITE=0
-    - WP_VERSION=5.2.7 WP_MULTISITE=0
-    - WP_VERSION=5.1.6 WP_MULTISITE=0
-    - WP_VERSION=5.0.10 WP_MULTISITE=0
 
 matrix:
   include:
@@ -85,14 +82,18 @@ script:
   - |
     # Run PHPUnit in both single site and multisite mode
     if [[ ! -z "$WP_VERSION" && "$WP_TRAVISCI" != "phpcs" ]] ; then
-      phpunit --verbose
-      WP_MULTISITE=1 phpunit --verbose
+      phpunit --verbose --coverage-clover=coverage.clover
+      WP_MULTISITE=1 phpunit --verbose --coverage-clover=coverage.clover
     fi
   - |
     # Run PHP_CodeSniffer coding standards if it's requested for this test
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
       phpcs
     fi
+
+after_script:
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
 
 branches:
   only:
