Adjust .eslintrc config to add path to babel config.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,10 @@
 {
   "extends": [
 	"plugin:@wordpress/eslint-plugin/recommended"
-  ]
+  ],
+  "parserOptions": {
+	"babelOptions": {
+	  "configFile": "./.babelrc"
+	}
+  }
 }
