--- a/.editorconfig
+++ b/.editorconfig
@@ -33,5 +33,5 @@ indent_size = 4
 indent_style = space
 indent_size = 4
 
-[*.txt,wp-config-sample.php]
+[{*.txt,wp-config-sample.php}]
 end_of_line = crlf
