--- a/package.json
+++ b/package.json
@@ -43,14 +43,15 @@
         "node": ">=16",
         "npm": ">=8"
     },
+    "browserslist": [
+        "extends @wordpress/browserslist-config"
+    ],
     "eslintConfig": {
         "extends": [
             "plugin:@wordpress/eslint-plugin/recommended"
         ]
     },
-    "browserslist": [
-        "extends @wordpress/browserslist-config"
-    ],
+    "prettier": "@wordpress/prettier-config",
     "dependencies": {
         "@fonticonpicker/fonticonpicker": "^3.1.0",
         "@fortawesome/fontawesome-free": "^5.15.0",
@@ -87,6 +88,7 @@
         "@wordpress/browserslist-config": "^4.1.0",
         "@wordpress/dependency-extraction-webpack-plugin": "^3.3.0",
         "@wordpress/eslint-plugin": "^10.0.0",
+        "@wordpress/prettier-config": "^1.0.0",
         "autoprefixer": "^10.4.0",
         "babel-loader": "^8.2.0",
         "babel-preset-env": "^1.7.0",
