--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
         "@wordpress/dependency-extraction-webpack-plugin": "^3.3.0",
         "@wordpress/eslint-plugin": "^10.0.0",
         "@wordpress/prettier-config": "^1.0.0",
+        "@wordpress/stylelint-config": "^20.0.0",
         "autoprefixer": "^10.4.0",
         "babel-loader": "^8.2.0",
         "babel-preset-env": "^1.7.0",
