Apply Prettier to `.eslintrc`.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,8 @@
 {
-  "extends": [
-	"plugin:@wordpress/eslint-plugin/recommended"
-  ],
-  "parserOptions": {
-	"babelOptions": {
-	  "configFile": "./.babelrc"
+	"extends": ["plugin:@wordpress/eslint-plugin/recommended"],
+	"parserOptions": {
+		"babelOptions": {
+			"configFile": "./.babelrc"
+		}
 	}
-  }
 }
