--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,13 @@
 {
 	"extends": ["plugin:@wordpress/eslint-plugin/recommended"],
+	"rules": {
+		"@wordpress/i18n-text-domain": [
+			"error",
+			{
+				"allowedTextDomain": ["connections"]
+			}
+		]
+	},
 	"parserOptions": {
 		"babelOptions": {
 			"configFile": "./.babelrc"
