--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
         "@wordpress/browserslist-config": "^4.1.0",
         "@wordpress/dependency-extraction-webpack-plugin": "^3.3.0",
         "@wordpress/eslint-plugin": "^10.0.0",
+        "@wordpress/npm-package-json-lint-config": "^4.0.0",
         "@wordpress/prettier-config": "^1.0.0",
         "@wordpress/stylelint-config": "^20.0.0",
         "autoprefixer": "^10.4.0",
