Add `johnpbloch/wordpress-core-installer` to `allow-plugins` in `composer.json`.

--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true,
+            "johnpbloch/wordpress-core-installer": true,
             "phpstan/extension-installer": true
         }
     }
