--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
         "@wordpress/url": "^3.4.0",
         "chosen-js": "^1.8.0",
         "js-cookie": "^2.2.0",
-        "leaflet": "^1.7.1",
+        "leaflet": "^1.7.0",
+        "leaflet-control-geocoder": "^2.4.0",
+        "leaflet.gridlayer.googlemutant": "^0.13.0",
         "picturefill": "^3.0.0",
         "pure-react-carousel": "^1.0.0",
         "react-slick": "^0.28.1"
