--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,11 @@
 {
-	"extends": ["plugin:@wordpress/eslint-plugin/recommended"],
+	"env": {
+		"jquery": true
+	},
+	"extends": [ "plugin:@wordpress/eslint-plugin/recommended" ],
+	"globals": {
+		"L": true
+	},
 	"rules": {
 		"@wordpress/i18n-text-domain": [
 			"error",
