--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
         "prettier": "npm:wp-prettier@^2.2.1-beta-1",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
+        "rtlcss-webpack-plugin": "^4.0.0",
         "sass-loader": "^12.4.0",
         "slick-carousel": "^1.8.1",
         "style-loader": "^3.0.0",
@@ -112,7 +113,6 @@
         "webpack": "^5.0.0",
         "webpack-cli": "^4.0.0",
         "webpack-remove-empty-scripts": "^0.7.0",
-        "webpack-rtl-plugin": "^2.0.0",
         "wp-pot": "^1.9.0"
     },
     "scripts": {
