--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
         "watch": "cross-env webpack --watch",
         "lint": "npm run lint:js & npm run lint:scss",
         "lint:js": "eslint assets/src/**/*.js blocks/**/*.js",
-        "lint:scss": "stylelint assets/src/**/*.scss"
+        "lint:scss": "stylelint assets/src/**/*.scss",
+        "translate": "wp i18n make-pot . languages/connections.pot --exclude=assets,bin,cache,includes/Libraries,node_modules,tests,vendor"
     }
 }
